--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <body>
         <div class="card">
             <div class="imgBx">
-                <img src="https://cdn.discordapp.com/avatars/584213384409382953/4438fe5d2f91ddd873407e759ff23116.png?size=1024">
+                <img src="image link">
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>Yee式機器龍<br><span>Since 2019
+                    <h2> name <br><span>Since 2019
                     </span></h2>
                     <div class="data">
-                        <h3>Kane<br><span>Author</span></h3>
-                        <h3>2.7m<br><span>User</span></h3>
-                        <h3>5.8w<br><span>Server</span></h3>
+                        <h3> name <br><span>Author</span></h3>
+                        <h3> count <br><span>User</span></h3>
+                        <h3> count <br><span>Server</span></h3>
                     </div>
                     <div class="actionBtn">
-                        <a href="https://yeecord.com">
+                        <a href="website link">
                             <button>Website</button>
                         </a>
-                        <a href="https://github.com/Gary50613">
+                        <a href="github link">
                             <button>Github</button>
                         </a>
-                        <a href="https://discord.gg/yeecord">
+                        <a href="discord link">
                             <button>Dsicord</button>
                         </a>
                     </div>
